# textEditor

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  textEditor.qrc
